--- a/backend/package.json
+++ b/backend/package.json
@@ -11,5 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "json-server": "^1.0.0-beta.3"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.18.0",
+    "eslint": "^9.18.0",
+    "globals": "^15.14.0"
   }
 }
