--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "json-server db.json --port 3000"
+    "start": "json-server api-artists/artists.json --port 3000"
   },
   "keywords": [],
   "author": "",
